<resources>
    <string name="app_name">TP3</string>
    <string name="AddStudentButton">Ajouter un étudiant</string>
    <string name="ListStudentButton">Lister les étudiants</string>
    <string name="nom">Nom :</string>
    <string name="pr_nom">Prénom :</string>
    <string name="sexe">Sexe :</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="email">Email :</string>
    <string name="date_de_naissance">Date de naissance :</string>
    <string name="groupe">Groupe :</string>
    <string name="redoublant">Redoublant :</string>
    <string name="ajouter">Ajouter</string>
    <string name="chooseADate">Choisir une date</string>
    <string name="modeaffichage">Mode d\'affichage des étudiants dans la liste</string>

    <string-array name="ListGroup">
        <item>SSINC</item>
        <item>SSID</item>
    </string-array>
    <string-array name="OrdreAffichage">
        <item>Nom Prénom</item>
        <item>Prénom Nom</item>
    </string-array>
    <string-array name="OrdreAffichageValues">
        <item>np</item>
        <item>pn</item>
    </string-array>
</resources>